playing with mappedning

--- a/public/books.html
+++ b/public/books.html
@@ -34,7 +34,7 @@
         <table>
         <thead>
           <tr>
-              <th class = "bookTitle">Title</th>
+              <th class = "bookTitle"><h4>Title</h4></th>
               <th class = "bookGenre">Genre</th>
               <th class = "bookDescription"> Description</th>
               <th class = "bookImg"> Book Cover</th>
