--- a/public/books.html
+++ b/public/books.html
@@ -35,9 +35,9 @@
         <thead>
           <tr>
               <th class = "bookTitle"><h4>Title</h4></th>
-              <th class = "bookGenre">Genre</th>
-              <th class = "bookDescription"> Description</th>
-              <th class = "bookImg"> Book Cover</th>
+              <th class = "bookGenre"><h4>Genre<h4></th>
+              <th class = "bookDescription"><h4>Description</h4></th>
+              <th class = "bookImg"><h4>Book Cover</h4></th>
           </tr>
         </thead>
 
