--- a/public/books.html
+++ b/public/books.html
@@ -34,7 +34,7 @@
         </center>
         <table>
         <thead>
-          <tr>
+          <tr class = "bookOverview">
               <th class = "bookTitle"><h4>Title</h4></th>
               <th class = "bookGenre"><h4>Genre<h4></th>
               <th class = "bookDescription"><h4>Description</h4></th>
