--- a/public/books.html
+++ b/public/books.html
@@ -43,7 +43,7 @@
         </thead>
 
         <tbody>
-          <tr>
+          <tr class = "bookRow">
             <td>Alvin</td>
             <td>Eclair</td>
             <td>$0.87</td>
