--- a/public/books.html
+++ b/public/books.html
@@ -42,7 +42,7 @@
           </tr>
         </thead>
 
-        <tbody>
+        <tbody class = "bookBody">
           <tr class = "bookRow">
             <td>Alvin</td>
             <td>Eclair</td>
