--- a/public/editbook.html
+++ b/public/editbook.html
@@ -29,35 +29,42 @@
       <br><br>
       <center>
         <div class="row">
+          <div class="row">
+            <p class = "headings"> Book Cover </p>
+              <img id= "book_photo">
+          </div>
+
     <form class="col s12">
       <div class="row">
+        <p class = "headings"> Title </p>
         <div class="input-field col s6">
-          <input placeholder="Book Name" id="book_title" type="text" class="validate">
+          <input placeholder="Book Name" id="book_title" type="text" class="validate" >
         </div>
       </div>
       <div class="row">
+        <p class = "headings"> Genre </p>
         <div class="input-field col s3">
           <input placeholder="Genre" id="book_genre" type="text" class="validate">
         </div>
       </div>
       <div class="row">
+        <p class = "headings"> Discription </p>
         <div class="input-field col s12">
           <input placeholder="Discription" id="book_discription" type="text" class="validate">
         </div>
       </div>
+
       <div class = "row">
-        <div class="input-field col s3">
-          <input placeholder="First Name" id="first_name" type="text" class="validate">
-        </div>
-        <div class="input-field col s3">
-          <input placeholder="Last Name" id="last_name" type="text" class="validate">
+        <p class = "headings"> Author/s </p>
+        <div class="input-field col s6" id = "authorField">
         </div>
       </div>
+
     </form>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit Editted Book
+    <button class="btn waves-effect waves-light" id = "submitBookEdit" type="submit" name="action">Submit Editted Book
    <i class="material-icons right">send</i>
  </button>
-  </div>
+
 
     </div>
   </div>
