delete author new works

--- a/public/bookauthors.html
+++ b/public/bookauthors.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
@@ -27,40 +28,22 @@
     <div class="container">
       <br><br>
       <center>
-      <a href= "addbook.html"><img src = "img/addbook.png"></a>
-      <div class="row center">
-        <form class="col s12">
+        <div class="row">
           <div class="row">
-            <div class="input-field col s6">
-              <input placeholder="Book Name" id="book_title" type="text" class="validate">
-            </div>
+            <p class = "headings"> </p>
+              <img class= "author_photo">
           </div>
-          <div class="row">
-            <div class="input-field col s3">
-              <input placeholder="Genre" id="book_genre" type="text" class="validate">
-            </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <input placeholder="Discription" id="book_discription" type="text" class="validate">
-            </div>
-          </div>
-          <div class = "row">
-            <div class="input-field col s3">
-              <input placeholder="First Name" id="first_name" type="text" class="validate">
-            </div>
-            <div class="input-field col s3">
-              <input placeholder="Last Name" id="last_name" type="text" class="validate">
-            </div>
-          </div>
-        </form>
-        <button class="btn waves-effect waves-light" type="submit" id="addBookButton" name="action">Add Book
-       <i class="material-icons right">send</i>
-     </button>
+
+
+      <div class = "row">
+        <h4 class = "headings"> </h4>
+        <h6 class = "authorNameTitle"></h4>
+        <h4 class = "headings">  </h4>
+        <h6 class = "authorBio"></h4>
+
       </div>
-        </center>
-      </div>
-      <br><br>
+
+
 
     </div>
   </div>
@@ -85,7 +68,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-  <script src = "js/addbook.js"></script>
+  <script src="js/bookAuthors.js"></script>
 
   </body>
 </html>
